  * Handle missing keymap and/or locale debconf questions.
  * Fix kernel version detection.
  * Run hook scripts in /usr/lib/espresso/target-config (filenames
    containing '.' are ignored) so that casper can propagate appropriate
    parts of its configuration to the target system.
  * Use espresso-grub for GRUB installation rather than doing it by hand.
  * Drop dependency on yaboot | grub.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  5 Dec 2005 12:27:33 +0000

ubuntu-express (0.99-1) breezy; urgency=low

  * New UI design for gtk frontend.
  * Dual resolution supported (widget distribution and sizes are modified from
    screen resolution).
  * New grub configuration algorithm based on grub-installer scripts (from
    debian package).
  * Several bugfixes.

 -- Javier Carranza <javier.carranza@interactors.coop>  Wed, 30 Nov 2005 07:56:39 +0200

ubuntu-express (0.98ubuntu1) breezy; urgency=low

  * Added mountpoints validation and mountpoints preselection.
  * Added remaining time to progress bar.
  * Added a lot of source documentation and epydoc output fully updated.
  * Added peez2 autopartitioning (using freespace and reusing linux filesystems
    partition algorithms implemented).
  * A lot of bugfixes.

 -- Javier Carranza <javier.carranza@interactors.coop>  Sun, 16 Oct 2005 11:05:34 +0200

ubuntu-express (0.92ubuntu1) breezy; urgency=low

  * Added new mountpoint selector.
  * Some fixes to make lintian-friendly.

 -- Javier Carranza <javier.carranza@interactors.coop>  Tue, 06 Sep 2005 12:48:23 +0200

ubuntu-express (0.91ubuntu1) breezy; urgency=low

  * Validation module connected with gtk interface (for user and system input 
    information).
  * Gtk interface for validation module fully implemented.
  * fixed several bugs reported from ubuntu-devel list.
  * snapshots from quickguide updated.

 -- Javier Carranza <javier.carranza@interactors.coop>  Thu, 25 Aug 2005 16:50:48 +0200

ubuntu-express (0.9ubuntu1) breezy; urgency=low
